# School

./: README.md  account-settings.html  add-book.html  add-class.html  add-expense.html  add-parents.html  add-teacher.html  admit-form.html  all-book.html  all-class.html  all-expense.html  all-fees.html  all-parents.html  all-student.html  all-subject.html  all-teacher.html  button.html  class-routine.html  exam-grade.html  exam-schedule.html  grid.html  hostel.html  index.html  index3.html  index4.html  index5.html  map.html  messaging.html  notice-board.html  parents-details.html  progress-bar.html  student-attendence.html  student-details.html  student-promotion.html  teacher-details.html  teacher-payment.html  transport.html  ui-tab.html
ai-research-topic-classifier/: README.md  pyproject.toml
ai-research-topic-classifier/data/: sample_papers.csv
ai-research-topic-classifier/models/: topic_classifier.json
ai-research-topic-classifier/paper_topic_classifier/: label_text.py  model.py  run_train.py  utils.py
ai-student-performance-predictor/: README.md  pyproject.toml
ai-student-performance-predictor/data/: sample_students.csv
