[project]
name = "ai-student-performance-predictor"
version = "0.1.0"
description = "A dependency-free Python ML project for predicting student final scores."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
app = ["streamlit>=1.36.0"]

[tool.setuptools]
packages = ["student_performance"]
